css/research.css
html {
    height: 100%;
}
body {
    height: 100%;
    /* overflow-y: auto; */
    /* height: 200vh; */
    overflow: hidden;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    /* font-size: small; */
    /* for debug inside iframe use: */
    /* font-size: xx-small; */
}

#research-page{
    display: flex;
    flex-direction: column;
    /* justify-content: space-evenly; */
    justify-content: flex-end;
    align-items: center;
    /* TEST */
    /* height: 130vh;  */
    /* height: 70vh;  */
    /* height: 80%;  */
    /* height: 70%;  */
    /* flex: 0 0 70%; */

    /* not using top padding here, it's already not using the entire 100% height */
    /* padding: var(--iframe-inner-top-bottom-padding) var(--page-side-padding); */
    padding-right: var(--page-side-padding);
    padding-left: var(--page-side-padding);
    /* background-color: rgb(196, 20, 20); */

    flex: 0 0 100%;
}

#research-page-2nd{
    display: flex;
    flex-direction: column;
    /* justify-content: space-evenly; */
    justify-content: flex-start;
    align-items: center;

    /* not using top padding here, it's already not using the entire 100% height */
    /* padding: var(--iframe-inner-top-bottom-padding) var(--page-side-padding); */
    padding-right: var(--page-side-padding);
    padding-left: var(--page-side-padding);
    /* background-color: rgb(196, 20, 20); */

    /* flex: 0 0 100%; */
}

@media screen and (max-width: 768px) {
    #research-page{
        /* height: 100%; */
        /* justify-content: flex-start; */
        justify-content: space-evenly;
        /* font-size: xx-small;  */
    }
    
}

/* P1 */

#title_wrapper{
    display: flex;
    flex-direction: row;
    align-items: center;
    width: 100%;
    /* note: this effects the spacing of glyphs. to control them independently, they need a separate container */
    /* height: 40%; */
}

#title_spacer{
    /* background-color: rgb(196, 20, 20); */
    width: 10%;
    height: auto;
}

#title{
    display: flex;
    /* background-color: rgb(176, 196, 20); */
    flex-direction: column;
    justify-content: center;
    width: 50%;
}



#title h1{
    width: 100%;
    font-family: TransletterGX;
    font-size: 9em;
    margin: 0;
    height: auto;
    /* margin-bottom: 15%; */
    margin-bottom: 10%;
    margin-right: -0.07em;
    text-align: right;
}

#title p{
    padding-top: 5%;
    width: 85%;
    /* font-size: 0.9em; REMOVED */
}


@media screen and (max-width: 768px) {
    #title{
        width: 100%;
    }
    #title h1{
        font-size: 5em;
        margin-bottom: 4%;
    }

    #title_spacer{
        width: 0;
    }

    p{
        width: 100%;
    }

    #title p{
        width: 100%;
        font-size: 0.6em;
    }

    /* #title_wrapper{ */
        /* height: auto; */
    /* } */

    /* Force a new line after the first button */
    /* #glyph_selector button:nth-of-type(1) {
        flex-basis: 100%; 
    } */
}


#glyph_selector{
    display: flex;
    flex-direction: row;
    justify-content: space-between; 
    align-items: center;
    /* font-size: 3vh; */
    font-size: 150%;
    /* font-variation-settings: "vrot" 500; */
    font-size: 2em;
    font-weight: bold;
    height: 80%;
    width: 80%;
}

#glyph_selector button{
    font-family: inherit;
    background-color: var(--background-color);
    color: var(--element-color);
    font-size: inherit;
    border: none;
    border-radius:100%;
    width: 1.2em;
    height: 1.2em;
    padding: 0;
    margin: 0;
}

#glyph_selector button:hover{
    background-color: var(--footer-gray);
}

#glyph_selector button:focus{
    background-color: var(--element-color);
    color: var(--background-color);
}

#glyph_selector button.selected{
    background-color: var(--element-color);
    color: var(--background-color);
}

#glyph_space{
    /* background-color: rgb(20, 196, 187); */
    /* height: 8%; */
    width: 100%;
    display: flex;
    /* justify-content: space-evenly; */
    justify-content: space-between;
    align-items: center;
    font-size: 3.5em;
}

#divider {
    content: '';
    height: 1px;
    background-color: var(--slider-gray);
    /* flex-grow: 1; */
    width:100%;
    display: block;
    border: none;
  }

#handwritten_glyph_space{
    /* height: 9%; */
    width: 100%;
    display: flex;
    /* justify-content: space-around; */
    justify-content: space-between;
    align-items: flex-start;
}

#handwritten_glyph_space img {
    width: 5.7em;
    padding: 10%;
    height: auto;
}

#handwritten_glyph_space img:hover {
    /* best approx to var(--gradient-blue) */
    filter: brightness(0) invert(1) sepia(1) saturate(1000%) hue-rotate(97deg);
    /* transition saturation rather than hue. */
    transition: saturate .3s ease .15s;
}

@media screen and (max-width: 768px) {

    #glyph_selector{
        width: 100%;
        flex-wrap: wrap;
    }

    #glyph_selector button{
        width: 1.5em;
        height: 1.5em;
    }

    #glyph_space{
        width: 100%;
        font-size: 1.4em;
    }

    #divider {
        border: 0.1px solid var(--slider-gray);

    }

    #handwritten_glyph_space{
        width: 100%;
        font-size: 1em;
        flex-wrap: wrap;
    }

    #handwritten_glyph_space img {
        /* width: 1.7em; */
        /* width: 1.7em; */
        padding: 2%;
        font-size: 0.7em;
    }

    div.handwritten-text-image-container{
        width: 20%;
        flex-wrap: wrap;
    }

    .handwritten-text-label{
        max-height: 110px;
    }
    
    #button_title{
        width: 100%;
        padding-bottom: 5%;
        font-size: 0.8em;
    }

}

.handwritten-text-image-container {
    display: flex;
    flex-direction: column;
    width: 10%;
    /* margin: 0 10px; */
    /* margin-right: 1%; */
    /* margin-top: 3%; */
}
/* ... */

